--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,16 @@ bld/
 [Bb]in/
 [Oo]bj/
 
+# tests
+tests/
+
+# wwwroot
+wwwroot/
+
+# dependencies
+bower_components/
+node_modules/
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
