--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,11 @@
             "taskName": "aspnet:build",
             "isBuildCommand": false,
             "showOutput": "always"
+        },
+        {
+            "taskName": "default",
+            "isBuildCommand": true,
+            "showOutput": "always"
         }
     ]
 }
